deploy/02_k8s_basics/health-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: health
  name: health
  namespace: ms-arch-homework
spec:
  ports:
  - nodePort: 30500
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: health
  type: NodePort
